--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,7 @@
 server.port=9090
 
 app.lang.hello=esp
+
+server.error.include-message=always
+server.error.include-binding-errors=always
+server.error.include-exception=true
